# demo-actix-web-beauty-webapp

./: README.md
api/: Cargo.toml
api/db/: my_pham_mysql.sql  my_pham_mysql_deploy.sql
api/src/: api.rs  app.rs  db.rs  errors.rs  handler.rs  main.rs  middlewares.rs  share.rs  utils.rs
webapp/: README.md  nuxt.config.js  package.json
webapp/assets/styles/: main.css
webapp/components/: bg-carousel.vue  nav-bottom.vue  nav-header.vue  navigation.vue  reviews.vue
webapp/layouts/: admin.vue  default.vue
webapp/middleware/: auth.js  check-auth.js
webapp/pages/: chinh-sach-dai-ly.vue  gioi-thieu.vue  index.vue  lien-he.vue
webapp/pages/admin/: background.vue  index.vue  review.vue
webapp/plugins/: core-components.js  nossr-components.js
webapp/static/css/: main.css  main.min.css
webapp/store/: actions.js  getters.js  index.js  mutations.js
webapp/utils/: debounce.js
