[package]
name = "api"
version = "0.1.0"
authors = ["Tinh Phan <minhtinh885@gmail.com>"]

[dependencies]
actix = "0.7.6"
actix-web = "0.7.13"
bcrypt = "0.2.1"
env_logger = "0.5.13"
failure = "0.1.3"
jsonwebtoken = "5.0.1"
futures = "0.1.25"
r2d2 = "0.8.3"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
dotenv = "0.13.0"
chrono = { version = "0.4.6", features = ["serde"] }
num_cpus = "1.8.0"
mysql = "14.1.1"
r2d2_mysql = "9.0.0"
rand = "0.6.0"
regex = "1.0.6"